package utilisateurs;

public class Moderateur extends Utilisateur{

    public Moderateur(String em, String mdp, String n, String p) {
        super(em, mdp, n, p);
    }
    
}
